--- a/includes/_02_installation.adoc
+++ b/includes/_02_installation.adoc
@@ -5,15 +5,13 @@ Cherrytree is available for Linux and Windows.
 === Fedora (Red Hat)
 
 [start=1]
-. Download the latest installer with a *.rpm* extension from the {download}[downloads webpage].
-. Open a terminal and navigate to the directory containing your installation file.
-. Type the following command, replacing _cherrytree.rpm_ with the name of your installation file: `sudo rpm -Uvh --force _cherrytree.rpm_`. gin the installation.
+. Download the latest installer that has a *.rpm* extension from the {download}[downloads webpage].
+. Open a terminal and change to the directory containing your installation file.
+. Enter the following command, replacing `cherrytree.rpm` with the name of your installation file: 
 +
-[[figure-2.01]]
-.Figure 2.01
-{rhinstall01}
+  sudo rpm -Uvh --force cherrytree.rpm
 
-. Provide your password when prompted to be
+. Provide your password when prompted to complete the installation.
 
 === Ubuntu (Debian)
 
@@ -21,107 +19,51 @@ Cherrytree can be installed to Ubuntu via the *Ubuntu Software* application or t
 
 ==== Option One: Ubuntu Software
 
-A PPA (Personal Package Archive) must be added to ensure that the latest version of Cherrytree is installed through Ubuntu Software. 
+Add the Cherrytree PPA (Personal Package Archive) to ensure that the application version installs. 
 
 [start=1]
 . Open the *Software and Updates* application.
+. Go to the *Other Software* tab.
+. Click *Add*.
+. Enter the following snippet into the textbox:
 +
-[[figure-2.02]]
-.Figure 2.02
-{ubuntuinstall01}
+  ppa:giuspen/ppa
 
-. Navigate to the *Other Software* tab and click *Add*.
+. Click *Add Source* and enter your password when prompted.
+. Confirm that the PPA is added then close the window.
 +
-[[figure-2.03]]
-.Figure 2.03
-{ubuntuinstall02}
-
-. Paste the following snippet `ppa:giuspen/ppa` into the textbox, then click *Add Source* and enter your password when prompted.
-+
-[[figure-2.04]]
-.Figure 2.04
-{ubuntuinstall03}
-
-. Confirm that the PPA has been added, then close the window.
-+
-[[figure-2.05]]
-.Figure 2.05
+[[figure-2.01]]
+.Figure 2.01
 {ubuntuinstall04}
 
-. When prompted, click *Reload* and enter your password to install updates from the newly added source.
-+
-[[figure-2.06]]
-.Figure 2.06
-{ubuntuinstall05}
-
-. Open Ubuntu Software and search for Cherrytree, then select the application and click *Install*. 
-+
-[[figure-2.07]]
-.Figure 2.07
-{ubuntuinstall06}
-
+. Click *Reload* and enter your password to install updates from the newly added source.
+. Open *Ubuntu Software* and search for Cherrytree.
+. Select the application and click *Install*. 
 . Provide your password when prompted to begin the installation.
-. After the application is installed, click *Launch* and confirm that the latest version is running. + 
-Reference the {changelog}[changelog] to determine the latest version. 
-+
-[[figure-2.08]]
-.Figure 2.08
-{ubuntuinstall07}
+. Launch *Cherrytree* and confirm that the latest version of the application is installed by comparing its version number, located in the title bar, with the latest version documented in the {changelog}[changelog]. + 
 
 ==== Option Two: Command Line
 
 [start=1]
-. Download the latest installer with a *.deb* extension from the {download}[downloads webpage].
-
-. Open a terminal and navigate to the directory containing your installation file.
-
-. Type the following command, replacing _cherrytree.deb_ with the name of your installation file: `sudo dpkg -i _cherrytree.deb_`. 
+. Download the latest installer that has a *.deb* extension from the {download}[downloads webpage].
+. Open a terminal and change to the directory containing the installation file.
+. Enter the following command, replacing `cherrytree.deb` with the name of your installation file: 
 +
-[[figure-2.09]]
-.Figure 2.09
-{debinstall01}
+  sudo dpkg -i cherrytree.deb
 
-. Provide your password when prompted to begin the installation.
+. Provide your user password when prompted to begin the installation.
 
 === Windows
 
 [start=1]
-. Download and run the latest installer with an *.exe* extension from {download}[downloads webpage].
+. Download and run the latest installer that has an *.exe* extension from the {download}[downloads webpage].
 
 . Select a language and click *Next*.
-+
-[[figure-2.10]]
-.Figure 2.10
-{wininstall01}
-
-. Accept the license, then click *Next*.
-+
-[[figure-2.11]]
-.Figure 2.11
-{wininstall02}
-
-. Select a directory for the application to be installed and click *Next*.
-+
-[[figure-2.12]]
-.Figure 2.12
-{wininstall03}
-
-. Select *Create a desktop shortcut* if you wish to have a shortcut. Click *Next*.
-+
-[[figure-2.13]]
-.Figure 2.13
-{wininstall04}
-
-. Review the provided summary, then click *Install* when you are ready to proceed.
-+
-[[figure-2.14]]
-.Figure 2.14
-{wininstall05}
-
+. Accept the license and click *Next*.
+. Select a directory to install the application to and click *Next*.
+. (*Optional*) Select *Create a desktop shortcut* to create a shortcut to the application during the installation process. 
+. Click *Next*.
+. Review the provided summary then click *Install*.
 . Click *Finish* to complete the installation.
-+
-[[figure-2.15]]
-.Figure 2.15
-{wininstall06}
 
-NOTE: If you have a previous version of Cherrytree installed, an error may occur when trying to overwrite *dbus-daemon.exe*. If so, skip the overwrite and restart your computer, then try again.
+NOTE: If a new version of Cherrytree is installed over a previous version, an error may occur when trying to overwrite *dbus-daemon.exe*. If so, skip the overwrite and restart your computer, then try again.
