--- a/includes/_06_nodes.adoc
+++ b/includes/_06_nodes.adoc
@@ -1,12 +1,12 @@
 == Nodes
 
-In computer science, a tree is a data structure consisting of nodes which are connected by edges. In the tree shown in <<figure-6.01>>, *my_book* is the root node. *Part 3* is one of three child nodes that belong to *my_book* and is also the parent node of *Chapter 6*. 
+A tree is a data structure consisting of nodes which are connected by edges. In the tree shown in <<figure-6.01>>, *my_book* is the root node. *Part 3* is one of three child nodes that belong to *my_book* and is also the parent node of *Chapter 6*. 
 
 [[figure-6.01]]
 .Figure 6.01
 {tree-diagram}
 
-<<figure-6.01>> might look like <<figure-6.02>> in Cherrytree, where the document name is the root node.
+<<figure-6.01>> might look like <<figure-6.02>> in Cherrytree, where the document name represents the root node.
 
 [[figure-6.02]]
 .Figure 6.02
@@ -15,17 +15,13 @@ In computer science, a tree is a data structure consisting of nodes which are co
 === Creating Nodes
 
 [start=1]
-. Click *Add Node* within the *Tree* menu -- found in the link:#menu-bar[menu bar]. This will create a {node-relations}[sibling] to the selected node, or a top-level node if no node is selected. To create a child node, click *Tree* > *Add Subnode*.
-+
-NOTE: These tools can also be found on the toolbar.
+. Select *Add Node* within the *Tree* to display the *New Node Properties* menu. 
 
-. Within *New Node Properties*, shown in <<figure-6.03>>, give your node a name. These properties can be changed later.
-+
-[[figure-6.03]]
-.Figure 6.03
-{new-node}
+NOTE: *Add Node* creates a {node-relations}[sibling] to the selected node or a top-level node if no node is selected. To create a child nodes, select *Tree* > *Add Subnode*.
 
-. Other available options:
+.  Provide a name for the node within *New Node Properties*. 
+
+. (*Optional*) Select any additional options:
 
 ** *Bold* - Increase the font-weight of the node title within the tree view.
 ** *Use Selected Color* - Change the text color of the node title within the tree view.
@@ -35,76 +31,71 @@ NOTE: These tools can also be found on the toolbar.
 NOTE: View link:#_text[*7. Text*] for more detail.
 
 ** *Tags for searching* - adds keywords that can be used to find the node in a search. Multiple tags can be separated by a blank space.
-** *Read Only* - Can be enabled to lock a node in its current state. This must be disabled to edit the document.
+** *Read Only* - Can be enabled to lock a node in its current state. This must be disabled to edit or delete the node.
 
 . Click *OK* to finish creating the node.
 
-Another way to create a node is to duplicate an existing node. Open the *Tree* menu and click *Duplicate Node* to copy the selected node to an identical {node-relations}[sibling].
+Node properties can be edited again later by clicking *Tree* > *Change Node Properties*. 
+
+==== Duplicating Nodes
+
+Another way to create a node is to duplicate an existing node.
+[start=1] 
+. Open the *Tree* menu.
+. Click *Duplicate Node* to copy the selected node to an identical {node-relations}[sibling].
 
 === Managing Nodes
 
-Nodes are primarily managed from the *Tree* menu, shown in  <<figure-6.04>>, which can be found in the menu bar or by right-clicking a node.
+Nodes are primarily managed from the *Tree* menu, which contains the following options:
 
-[[figure-6.04]]
-.Figure 6.04
-{tree-menu}
-
-*Change Node Properties* - Opens the *Node Properties* menu which is identical to the *New Node Properties* menu shown in <<figure-6.03>>.
-
-*Toggle Read Only* - Can be enabled to lock a node in its current state. This must be disabled to edit the document.
-
-*Add to Bookmarks / Remove from Bookmarks* - When a node is added to your bookmarks, a link to the node can be found in the *Bookmarks* menu, located in the menu bar. 
-
-*Insert Today's Node* - This will create a top-level node with a title set to the current year, a subnode of the current month, and a third-level node of the current day of the month and week. 
-
-[[figure-6.05]]
-.Figure 6.05
+* *Change Node Properties* - Opens the *Node Properties* menu which is identical to the *New Node Properties* and is used to define the node name, icon, and type.
+* *Toggle Read Only* - Locks a node in its current state. This must be disabled to edit or delete the node.
+* *Add to Bookmarks / Remove from Bookmarks* - When a node is added to your bookmarks, a link to the node can be found in the *Bookmarks* menu. 
+** *Add to Bookmarks* Adds a node to the bookmarks list.
+** *Remove from Bookmarks* Removes a node from the bookmarks list.
+* *Insert Today's Node* - Creates a top-level node with a title set to the current year, a subnode of the current month, and a third-level node of the current day of the month and week. 
++
+[[figure-6.03]]
+.Figure 6.03
 {today}
-
++
 Each time *Insert Today's Node* is used, it adds the current date to tree, cataloguing it with the existing nodes by year, month, and day. If today's node already exists, no new nodes are added and you are directed to the existing node instead. 
 
-*Tree Info* - Displays the following summary of the current document:
+* *Tree Info* - Displays the following summary of the current document:
 
-* The Number of Rich Text Nodes
-* The Number of Plain Text Nodes
-* The Number of Code Nodes
-* The Number of Images
-* The Number of Embedded Files
-* The Number of Tables
-* The Number of CodeBoxes
-* The Number of Anchors
+** The Number of Rich Text Nodes
+** The Number of Plain Text Nodes
+** The Number of Code Nodes
+** The Number of Images
+** The Number of Embedded Files
+** The Number of Tables
+** The Number of CodeBoxes
+** The Number of Anchors
 
-*Node Move* - Contains the following functions:
+* *Node Move* - Contains the following functions:
 
-* *Move Node Up* - Moves the selected node up one position within its current hierarchy. 
-* *Move Node Down* - Moves the selected node down one position within its current hierarchy.
-* *Move Node Left* - Moves the selected node up one level in hierarchy.
-* *Move Node Right* - Makes the selected node a subnode of the node above it. This will not work on the first child node, where the node above is its parent.
-* *Node Change Parent* - Allows you to choose a new parent node for the selected node.
+** *Move Node Up* - Moves the selected node up one position within its current hierarchy. 
+** *Move Node Down* - Moves the selected node down one position within its current hierarchy.
+** *Move Node Left* - Moves the selected node up one level in hierarchy.
+** *Move Node Right* - Makes the selected node a subnode of the node above it. This does not work on the first child node, where the node above is its parent.
+** *Node Change Parent* - Allows you to choose a new parent node for the selected node.
 +
 NOTE: Most of these functions can be performed by dragging a node up, down, or over another node within the tree view.
 
-*Node Sort* - Contains the following functions:
+* *Node Sort* - Contains the following functions:
 
-* *Sort Tree Ascending* - Sorts the entire tree alphabetically from top to bottom.
-* *Sort Tree Descending* - Sorts the entire tree alphabetically from bottom to top.
-* *Sort Node Ascending* - Sorts the selected node and its {node-relations}[siblings] alphabetically from top to bottom.
-* *Sort Node Descending* - Sorts the selected node and its {node-relations}[siblings] alphabetically from bottom to top.
+** *Sort Tree Ascending* - Sorts the entire tree alphabetically from top to bottom.
+** *Sort Tree Descending* - Sorts the entire tree alphabetically from bottom to top.
+** *Sort Node Ascending* - Sorts the selected node and its {node-relations}[siblings] alphabetically from top to bottom.
+** *Sort Node Descending* - Sorts the selected node and its {node-relations}[siblings] alphabetically from bottom to top.
+* *Find in Nodes Names and Tags* - link:#_search[Search] the entire tree for a set of characters within node titles and assigned tags.
+* *Replace in Nodes Names* - link:#_search[Search] the entire tree for a set of characters within node titles and assigned tags, and replace it with new characters.
+* *Nodes Import* - Opens the link:#_importing[*Import*] menu.
+* *Nodes Export* Opens the link:#_exporting[*Export*] menu.
+* *Inherit Syntax* - If the selected node and its {node-relations}[parent node] have an link:#_text[*Automated Syntax Highlighting*] type, the selected node inherits syntax highlighting for the language defined in its parent's *Node Properties* menu.
+* *Delete Node* - Removes the selected node from the tree.
++
+IMPORTANT: This also deletes any {node-relations}[children] of the selected node.
 
-*Find in Nodes Names and Tags* - link:#_search[Search] the entire tree for a set of characters within node titles and assigned tags.
-
-*Replace in Nodes Names* - link:#_search[Search] the entire tree for a set of characters within node titles and assigned tags, and replace it with new characters.
-
-*Nodes Import* - Opens the link:#_importing[*Import*] menu.
-
-*Nodes Export* Opens the link:#_exporting[*Export*] menu.
-
-*Inherit Syntax* - If the selected node and its {node-relations}[parent node] have an link:#_text[*Automated Syntax Highlighting*] type, the selected node will inherit syntax highlighting for the language defined in its parent's *Node Properties* menu.
-
-*Delete Node* - Removes the selected node from the tree.
-
-CAUTION: This will also delete any {node-relations}[children] of the selected node.
-
-*Go Back* - Move backward once in your node selection history.
-
-*Go Forward* - Move forward once in your node selection history.
+* *Go Back* - Move backward once in your node selection history.
+* *Go Forward* - Move forward once in your node selection history.
