--- a/includes/_09_settings.adoc
+++ b/includes/_09_settings.adoc
@@ -2,15 +2,11 @@
 
 === Text and Code
 
-[[figure-9.01]]
-.Figure 9.01
-{text-code-pref}
-
 ==== Text Editor
 
 * *Tab Width* - Defines the number of `space` characters that a `tab` is equal to in width.
 
-* *Insert Spaces Instead of Tabs* - When enabled, replaces one `tab` with a number of `spaces` equal to the number defined in *Tab Width*.
+* *Insert Spaces Instead of Tabs* - Replaces one `tab` with a number of `spaces` equal to the number defined in *Tab Width*.
 
 * *Use Line wrapping* - Restricts lines of text to the current viewport by forcing text to a new line. This does not break a line with `newline` characters and can be toggled as needed without compromising the line structure of a node.
 
@@ -27,7 +23,7 @@
 
 * *Vertical Space in Wrapped Lines* - Defines the percentage of the *Vertical Space Around Lines* value that applies to wrapped lines.
 +
-NOTE: This will have no effect if *Vertical Space Around Lines* is set to zero.
+NOTE: This has no effect if *Vertical Space Around Lines* is set to zero.
 
 ==== Miscellaneous
 
@@ -35,8 +31,8 @@ NOTE: This will have no effect if *Vertical Space Around Lines* is set to zero.
 +
 NOTE: See link:#_formatting_timestamps[*Formatting Timestamps*] for a list of timestamp directives or visit the {strftime}[*strftime* documentation] by click the icon next to the timestamp setting. 
 +
-[[figure-9.02]]
-.Figure 9.02
+[[figure-9.01]]
+.Figure 9.01
 {strftime-doc}
 
 * *Horizontal Rule* - Defines the text inserted for a link:#_horizontal_rule[horizontal rule].
@@ -44,11 +40,11 @@ NOTE: See link:#_formatting_timestamps[*Formatting Timestamps*] for a list of ti
 +
 New characters can be added to the list by pasting them next to the existing characters. Click the yellow arrow icon to reset to the default list of characters.
 +
-[[figure-9.03]]
-.Figure 9.03
+[[figure-9.02]]
+.Figure 9.02
 {spec-char-default}
 
-* *Chars to Select at Double Click* - By default, double-clicking text selects the sequence of letters and numbers that are under the mouse pointer and are not separated by whitespace, punctuation, or special characters. Adding characters to the *Chars to Select at Double Click* setting will include those characters in a double-click selection.
+* *Chars to Select at Double Click* - By default, double-clicking text selects the sequence of letters and numbers that are under the mouse pointer and are not separated by whitespace, punctuation, or special characters. Adding characters to the *Chars to Select at Double Click* setting includes those characters in a double-click selection.
 
 ==== Formatting Timestamps
 
@@ -87,14 +83,10 @@ The table below, copied from the {strftime}[*strftime* documentation], can be re
 
 === Text
 
-[[figure-9.04]]
-.Figure 9.04
-{text-pref}
+*Enable Smart Quotes Auto Replacement* - Converts paired quotation marks on a line to smart quotes, illustrated in <<figure-9.03>>.
 
-*Enable Smart Quotes Auto Replacement* - When enabled, this converts paired quotation marks on a line to smart quotes, illustrated in <<figure-9.05>>.
-
-[[figure-9.05]]
-.Figure 9.05
+[[figure-9.03]]
+.Figure 9.03
 {smart-quotes}
 
 [[rich-text-pref]]
@@ -102,17 +94,13 @@ The table below, copied from the {strftime}[*strftime* documentation], can be re
 
 The *Rich Text* preferences menu provides configuration options for link:#_rich_text[Rich Text nodes].
 
-[[figure-9.06]]
-.Figure 9.06
-{rich-text-pref}
-
 ==== Spell Check
 
 * *Enable Spell Check* - Toggles Cherrytree's spell check feature.
 +
 NOTE: *Enchant* is required for this feature. Install this dependency if your application is built from source and you haven't already. See link:#_building_from_source[*3. Building from Source*] for instructions.
 
-* *Spell Check Language* - Defines which language the to spell check. The following languages are available:
+* *Spell Check Language* - Defines which language to use in spell check. The following languages are available:
 ** *cs_CZ* - Czech (Czechia)
 ** *de_DE* - German (Germany)
 ** *en_Au* - English (Australia)
@@ -137,13 +125,13 @@ NOTE: *Enchant* is required for this feature. Install this dependency if your ap
 * *Dark Background, Light Text* - Sets the editor background color to dark blue and text color to white.
 
 * *Custom Background and Text* - Defines custom colors for the editor's background and text.
-* *Monospace Background* - Defines the background of monospace text.
+* *Monospace Background* - Defines the background color of monospace text.
 
 ==== Miscellaneous
 
 * *Show White Spaces* - Displays character markers over spaces.
 
-* *Highlight Current Line* - When enabled, highlights the line of the cursor position.
+* *Highlight Current Line* - Highlights the line of the cursor position.
 
 * *Expand CodeBoxes Automatically* - Increases the height of codeboxes to fit its content in one viewport.
 
@@ -157,41 +145,37 @@ NOTE: *Enchant* is required for this feature. Install this dependency if your ap
 
 The *Plain Text and Code* preferences menu provides configuration options for link:#_automatic_syntax_highlighting[automatic syntax highlighted] nodes, link:#_plain_text[plain text] nodes, and link:#codebox[codeboxes].
 
-[[figure-9.07]]
-.Figure 9.07
-{plain-text-code-pref}
-
 ==== Text Editor
 
 * *Style Scheme* - Defines the color theme for link:#_automatic_syntax_highlighting[automatic syntax highlighting] nodes, link:#_plain_text[plain text] nodes, and link:#_codebox[codeboxes].
 ** *Classic*
 +
-[[figure-9.08]]
-.Figure 9.08
+[[figure-9.04]]
+.Figure 9.04
 {classic-theme}
 
 ** *Cobalt*
 +
-[[figure-9.09]]
-.Figure 9.09
+[[figure-9.05]]
+.Figure 9.05
 {cobalt-theme}
 
 ** *Kate*
 +
-[[figure-9.10]]
-.Figure 9.10
+[[figure-9.06]]
+.Figure 9.06
 {kate-theme}
 
 ** *Oblivion*
 +
-[[figure-9.11]]
-.Figure 9.11
+[[figure-9.07]]
+.Figure 9.07
 {oblivion-theme}
 
 ** *Tango*
 +
-[[figure-9.12]]
-.Figure 9.12
+[[figure-9.08]]
+.Figure 9.08
 {tango-theme}
 
 * *Show White Spaces* - Displays character markers over spaces.
@@ -205,80 +189,60 @@ This section defines the command, for each language, that runs when a link:#_exe
 ==== Adding a New Command
 
 [start=1]
-. Click the `+` icon, shown in <<figure-9.13>>, to display the *Select Element to Add* menu, <<figure-9.14>>.
+. Click the `+` icon, shown in <<figure-9.09>>, to display the *Select Element to Add* menu.
 +
-[[figure-9.13]]
-.Figure 9.13
+[[figure-9.09]]
+.Figure 9.09
 {add-command}
 
 . Select a language to apply the new command to.
-+
-[[figure-9.14]]
-.Figure 9.14
-{select-language-menu}
-
-. Click *OK*
-
+. Click *OK*.
 . Find the new language rule in the list and link:#_editing_a_command[edit the command].
 
 ==== Editing a Command
 
 Double-click a command to edit its value.
 
-[[figure-9.15]]
-.Figure 9.15
-{edit-command}
-
-CAUTION: `<tmp_src_path>` is a variable that represents the codebox or node being executed. It should not be removed from the command.
+WARNING: `<tmp_src_path>` is a variable that represents the codebox or node being executed. It should not be removed from the command.
 
 ==== Reset Commands
 
 Click the yellow return arrow to reset to the default list of commands.
 
-[[figure-9.16]]
-.Figure 9.16
+[[figure-9.10]]
+.Figure 9.10
 {reset-commands}
 
 ==== Terminal Command 
-This is the command line configuration required to execute code within Cherrytree. To configure a terminal, set this option to a command that executes another command within a new instance of your terminal. Use `<command>` as a placeholder for the command to be executed in the new instance.
+The terminal command is a configuration required to execute code within Cherrytree. To configure a terminal, set this option to a command that executes another command within a new instance of your terminal. Use `<command>` as a placeholder for the command to be executed in the new instance.
 
-For example, when a codebox is executed on the machine in <<figure-9.17>>, the following command is used: `start cmd /k "<command>"`.
+For example, when a codebox is executed on the machine in <<figure-9.11>>, the following command is used: `start cmd /k "<command>"`.
 
-[[figure-9.17]]
-.Figure 9.17
+[[figure-9.11]]
+.Figure 9.11
 {terminal-execution}
 
-* `start cmd` - opens a new instance of command prompt.
-* `/k` - a command line option to execute the text that follows inside quotation marks.
-* `<command>` - a variable which represents one of the language-specific commands that are defined in the link:#_code_execution[code execution] options.
+* `start cmd` - Opens a new instance of command prompt.
+* `/k` - A command line option to execute the text that follows inside quotation marks.
+* `<command>` - A variable which represents one of the language-specific commands that are defined in the link:#_code_execution[code execution] options.
 
-NOTE: The language-specific command represented by `<command>` is determined by the language selected in the link:#_codebox[codebox properties]. If, for example, a codebox executed in <<figure-9.17>> is configured for python3, `<command>` represents `python3 <tmp_src_path>`. 
+NOTE: The language-specific command represented by `<command>` is determined by the language selected in the link:#_codebox[codebox properties]. If, for example, a codebox executed in <<figure-9.11>> is configured for python3, `<command>` represents `python3 <tmp_src_path>`. 
 
 === Tree 1
 
 The *Tree 1* preferences menu provides configuration options for the link:#tree-view[tree view] panel.
 
-[[figure-9.18]]
-.Figure 9.18
-{tree1-pref}
-
 ==== Theme
 
 * *Light Background, Dark Text* - Sets the tree view background color to white and text color to black.
-
 * *Dark Background, Light Text* - Sets the tree view background color to dark blue and text color to white.
-
 * *Custom Background and Text* - Defines custom colors for the editor's background and text.
-
 
 ==== Default Text Nodes Icons
 
 * *Use Different Cherries per Level* - Assigns a unique, default icon to each group of nodes sharing the same hierarchical level within a node structure.
-
 * *Use Selected Icon* - Assigns one icon to be the default icon for all nodes.
-
 * *No Icon* - Prevents Cherrytree from assigning icons to nodes by default.
-
 * *Hide Right Side Auxiliary Icon* - Hides icons regarding a node's status, such as the *Read Only* and *Bookmarked* icons.
 
 NOTE: Default icons can be overwritten within the *Use Selected Icon* option of a node's link:#_creating_nodes[property menu].
@@ -286,79 +250,51 @@ NOTE: Default icons can be overwritten within the *Use Selected Icon* option of 
 ==== Node Status at Startup
 
 * *Restore Expanded/Collapsed Status* - Nodes of a document retain their expand/collapse state after the document is closed and opened again.
-
 * *Expand all Nodes* - All nodes expand when Cherrytree starts.
-
 * *Collapse all Nodes* - All nodes collapse when Cherrytree starts.
-
 * *Nodes in Bookmarks Always Visible* - {node-relations}[Parents] of bookmarked nodes expand on startup so that all bookmarked nodes are visible within the link:#tree-view[tree view].
 
 === Tree 2
 
 The *Tree 2* preferences menu is a continuation of link:#_tree_1[*Tree 1*], providing additional configuration options for the link:#tree-view[tree view] panel.
 
-[[figure-9.19]]
-.Figure 9.19
-{tree2-pref}
-
 ==== Miscellaneous
 
 * *Tree Nodes Names Wrapping Width* - Defines the width in pixels at which text begins to wrap within the link:#tree-view[tree view].
-
 * *Display Tree on Right Side* - Moves the link:#tree-view[tree view] panel to the right side of the window.
-
-* *Move Focus to Text at Mouse Click* - When a node is selected, the editor becomes the active panel, and the cursor is positioned at the beginning of the first line.
-
+* *Move Focus to Text at Mouse Click* - When a node is selected, the editor becomes the active panel with the cursor positioned at the beginning of the first line.
 * *Expand Node at Mouse Click* - Collapsed nodes expand when they are selected within the link:#tree-view[tree view].
-
 * *Last Visited Nodes on Node Name Header* - Defines the number of most recently visited nodes to display above the editor.
 +
-[[figure-9.20]]
-.Figure 9.20
+[[figure-9.12]]
+.Figure 9.12
 {recent-nodes}
 
 === Fonts
 
-[[figure-9.21]]
-.Figure 9.21
-{fonts-pref}
-
 * *Rich Text* - Defines the default font family, style, and size applied to Rich Text.
-
 * *Plain Text* - Defines the default font family, style, and size applied to Plain Text.
-
 * *Code Font* - Defines the default font family, style, and size applied to syntax-highlighted text.
-
 * *Tree Font* - Defines the default font family, style, and size applied to text within the link:#tree-view[tree view].
 
 === Links
 
-[[figure-9.22]]
-.Figure 9.22
-{links-pref}
-
 ==== Custom Actions
 
 * *Enable Custom Web Link Click Action* - Defines a custom command to run when a web link is clicked within Cherrytree.
-
 * *Enable Custom File Link Clicked Action* -  Defines a custom command to run when a file link is clicked within Cherrytree.
-
 * *Enable Custom Folder Link Clicked Action* -  Defines a custom command to run when a folder link is clicked within Cherrytree.
 
 ==== Colors
 
 * *To Website* - Defines the default text color of links to websites.
-
 * *To File* - Defines the default text color of links to files.
-
 * *To Node* - Defines the default text color of links to nodes.
-
 * *To Folder* - Defines the default text color of links to folders.
 
 ==== Miscellaneous
 
 * *Underline Links* - Apply the pass:[<u>underline</u>] property to all links by default.
-
 * *Use Relative Paths for Files and Folders* - When defining paths for links, use link addresses that are relative to the directory containing the current working document.
 +
 NOTE: {relative-paths}[Click here] for more information about relative paths.
@@ -369,24 +305,16 @@ NOTE: {relative-paths}[Click here] for more information about relative paths.
 
 The *Toolbar* preferences menu provides configuration options for the link:#toolbar[toolbar] panel.
 
-[[figure-9.23]]
-.Figure 9.23
-{toolbar-pref}
-
 ==== Adding Actions to the Toolbar
 
 [start=1]
-. Click the `+` icon, shown in <<figure-9.24>> to display the *Select Element to Add* window, <<figure-9.25>>.
+. Click the `+` icon, shown in <<figure-9.13>> to display the *Select Element to Add* window.
 +
-[[figure-9.24]]
-.Figure 9.24
+[[figure-9.13]]
+.Figure 9.13
 {add-action}
 
 . Select an action to add.
-+
-[[figure-9.25]]
-.Figure 9.25
-{select-element-menu}
 +
 NOTE: The `---------` option represents a vertical divider in the toolbar.
 . Click *OK* to complete the addition.
@@ -399,50 +327,41 @@ The action can then be dragged up or down to determine its position on the toolb
 . Select an action.
 . Click the `-` icon to remove the selected action from the link:#toolbar[toolbar].
 +
-[[figure-9.26]]
-.Figure 9.26
+[[figure-9.14]]
+.Figure 9.14
 {remove-action}
 
 ==== Reset Toolbar Settings
 
 Click the yellow return button to return to Cherrytree's default toolbar settings.
 
-[[figure-9.27]]
-.Figure 9.27
+[[figure-9.15]]
+.Figure 9.15
 {default-toolbar}
 
 === Keyboard Shortcuts
 
 The *keyboard Shortcuts* preferences menu provides configuration options for shortcuts to Cherrytree's features.
 
-[[figure-9.28]]
-.Figure 9.28
-{keyboard-pref}
-
 ==== Editing a Keyboard Shortcut
 
 [start=1]
 . Select a shortcut to edit.
-. Click the edit shortcut button, shown in <<figure-9.29>> to display the *Edit Keyboard Shortcut* menu, <<figure-9.30>>.
+. Click the edit shortcut button to display the *Edit Keyboard Shortcut* menu.
 +
-[[figure-9.29]]
-.Figure 9.29
+[[figure-9.16]]
+.Figure 9.16
 {edit-shortcut-button}
 
-. Select *No Keyboard Shortcut* to remove a shortcut or toggle any of the three options, *control*, *shift*, and *alt*, and add one or more keys to the adjacent form.
-+
-[[figure-9.30]]
-.Figure 9.30
-{edit-shortcut-menu}
-
+. Select *No Keyboard Shortcut* to remove a shortcut. Alternatively, toggle any of the three options: *control*, *shift*, and *alt*, and add one or more keys to the adjacent form to define the keyboard shortcut.
 . Click *OK* to complete the edit.
 
 ==== Reset Keyboard Shortcuts Settings
 
 Click the yellow return button to return to Cherrytree's default shortcut settings.
 
-[[figure-9.31]]
-.Figure 9.31
+[[figure-9.17]]
+.Figure 9.17
 {reset-shortcuts}
 
 ==== Default Keyboard Shortcuts
@@ -579,24 +498,16 @@ Click the yellow return button to return to Cherrytree's default shortcut settin
 
 === Miscellaneous
 
-[[figure-9.32]]
-.Figure 9.32
-{misc-pref}
-
 ==== System Tray
 
-* *Enable System Tray Docking* - Closing Cherrytree minimizes the application to a background process which can be quickly accessed from the machine's system tray. *AppIndicator* may be required to access Cherrytree from the system tray in Linux. 
-
+* *Enable System Tray Docking* - Closing Cherrytree minimizes the application to a background process which can be more quickly accessed from the machine's system tray. *AppIndicator* may be required to access Cherrytree from the system tray in Linux. 
 * *Start Minimized in the System Tray* - Minimizes Cherrytree to the system tray on startup.
-
 * *Use AppIndicator for Docking* - (Linux only) Uses the appindicator feature to provide quick access to Cherrytree from your system tray.
 
 ==== Saving
 
-* *Autosave Every `x` Minutes* - When enabled, saves the working document every `x` minutes, where `x` is the number defined in this setting.
-
+* *Autosave Every `x` Minutes* - Saves the working document every `x` minutes, where `x` represents the number defined in this setting.
 * *Autosave on Quit* - Saves the document upon closing Cherrytree.
-
 * *Create a Backup Copy Before Saving* - Stores a copy of the previous version before saving the new version. Backups are stored in the same directory as the current document. 
 +
 To open a backup:
@@ -605,27 +516,24 @@ To open a backup:
 . Rename the backup file, deleting the `~` characters appended to its extension.
 . Open the backup file within Cherrytree.
 
-* *Number of Backups to Keep* - Defines the number of backups to keep. The oldest backup will be removed when this limit is exceeded.
-
-CAUTION: This also applies to autosaves that run on a time interval. For example, if your application is configured to save every 5 minutes, Cherrytree creates a backup every five minutes. When the backup limit is exceeded, a backup is cycled out every 5 minutes.
+* *Number of Backups to Keep* - Defines the number of backups to keep. The oldest backup is removed when this limit is exceeded.
++
+WARNING: This also applies to autosaves that run on a time interval. For example, if your application is configured to save every 5 minutes, Cherrytree creates a backup every five minutes. When the backup limit is exceeded, a backup is cycled out every 5 minutes.
 
 ==== Miscellaneous
 
 * *Automatically Check for Newer Version* - Checks the Cherrytree website on startup to determine if a new version of the application is available for download.
-
-* *Enable Word Count in Statusbar* - Displays the word count of the selected node at the bottom of the main window.
-
+* *Enable Word Count in Statusbar* - Displays the word count of the selected node below the editor.
 * *Reload Document from Last Session* - Cherrytree opens to the same document that was last opened in the previous session.
-
 * **Reload After External Update to CT* File** - Cherrytree refreshes its instance of a document to reflect changes made to the document from other instances.
 
-WARNING: Cherrytree is not intended to be used as a collaboration tool. *Only one instance of a document should be edited at a time.* Editing two or more instances of a document at the same time yields a high potential for *errors* and *data loss*.
+IMPORTANT: Cherrytree is not intended to be used as a collaboration tool. *Only edit one instance of a document at a time.* Editing two or more instances of a document at the same time yields a high potential for *errors* and *data loss*.
 
 ==== Language
 
 Defines the language of Cherrytree's interface. Select from one of the following languages:
 
-* *default* -
+* *default* 
 * *cs* - Czech
 * *de* - German
 * *el* - Modern Greek
